--- a/index.html
+++ b/index.html
@@ -14,73 +14,10 @@
         <link rel="stylesheet" href="assets/css/page.css" />
     </head>
     
-  <body class="">        <div id="mobile-bar" class="top">
-            <a class="menu-button"></a>
-            <a class="logo" href="/"></a>
-        </div>
-        <div id="header">
-  <a id="logo" href="/">
-    <img src="/images/logog.gif">
-    <span>@HelloLaravel</span>
-  </a>
-  <ul id="nav">
-    <li>
-  <form id="search-form">
-    <input type="text" id="search-query-nav" class="search-query st-default-search-input">
-  </form>
-</li>
-<li><a href="/mk/bn-laravel/" class="nav-link">laravel Bangla</a></li>
-
-<li><a href="/mk/bn-laravel/" class="nav-link">Tutorials</a></li>
-
-<li><a href="/mk/examples/" class="nav-link"> Awesome Laravel </a></li>
-<li class="nav-dropdown-container ecosystem">
-  <a class="nav-link">Packages</a><span class="arrow"></span>
-  <ul class="nav-dropdown">
-    <li><h4>Help</h4></li>
-    <li><ul>
-      <li><a href="http://forum.vuejs.org" class="nav-link" target="_blank">Forum</a></li>
-      <li><a href="https://gitter.im/vuejs/vue" class="nav-link" target="_blank">Chat</a></li>
-      <li><a href="https://github.com/vuejs-templates" class="nav-link" target="_blank">Templates</a></li>
-    </ul></li>
-    <li><h4>News</h4></li>
-    <li><ul>
-      <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">Twitter</a></li>
-      <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">Blog</a></li>
-      <li><a href="https://vuejobs.com/?ref=vuejs" class="nav-link" target="_blank">Jobs</a></li>
-    </ul></li>
-    <li><h4>Core Plugins</h4></li>
-    <li><ul>
-      <li><a href="https://router.vuejs.org/" class="nav-link" target="_blank">Vue Router</a></li>
-      <li><a href="https://vuex.vuejs.org/" class="nav-link" target="_blank">Vuex</a></li>
-    </ul></li>
-    <li><h4>Resource Lists</h4></li>
-    <li><ul>
-      <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">Official Repos</a></li>
-      <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Awesome Vue</a></li>
-    </ul></li>
-  </ul>
-</li>
-
-<li class="nav-dropdown-container language">
-  <a class="nav-link">Official</a><span class="arrow"></span>
-  <ul class="nav-dropdown">
-    <li><a href="http://localhost:4000/v2/api/" class="nav-link" target="">Laravel</a></li>
-    <li><a href="https://jp.vuejs.org/" class="nav-link" target="_blank">Laracast</a></li>
-    <li><a href="https://ru.vuejs.org/" class="nav-link" target="_blank">Laravel News</a></li>
-    <li><a href="https://kr.vuejs.org/" class="nav-link" target="_blank">Larajob</a></li>
-  </ul>
-</li>
+  <body class="">        
 
 
 
-<li>
-  <a href="https://medium.com/hello-laravel" target="_blank" class="nav-link shop">Blog</a>
-  <span class="new-label">NEW!</span>
-</li>
-
-  </ul>
-</div>
   
   
 
@@ -116,7 +53,7 @@
               <div class="row full-width">
 
                   <div class="large-2 columns code-column sidebar">
-                    <h5 class="sidebar-title">Laravel 5.1 LTS Cheat Sheet</h5>
+                    <h5 class="sidebar-title">Hello laravel</h5>
                     <hr class="horizonal-line">
                     <div class="show-for-medium">
                       <button class="warning hollow button check-all-button">Check All</button>
